// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createClusterLaunchLink Should return '-' with empty string for URL 1`] = `"-"`;

exports[`createClusterLaunchLink Should return '-' with null status 1`] = `"-"`;

exports[`createClusterLaunchLink Should return a valid cluster link 1`] = `"https://console"`;

exports[`createClusterLaunchLink Should return undefined with incorrect param 1`] = `undefined`;

exports[`createComplianceLink Should create compliance link 1`] = `
<Link
  to="undefined/all/policy1"
>
  policy1
   (Deprecated)
</Link>
`;

exports[`createComplianceLink Should create policy link 1`] = `
<Link
  to="undefined/all/mcm/policy1"
>
  policy1
</Link>
`;

exports[`createComplianceLink Should item.metadata.name 1`] = `"policy1"`;

exports[`createComplianceLink Should undefined 1`] = `undefined`;
